added a few links, modified form method from 'form_for' to 'form_with' to meet the latest version styles

--- a/Back_On_Rails/app/views/users/new.html.erb
+++ b/Back_On_Rails/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
+<p><%= link_to 'Home', root_path %></p>
+
 <h1>Sign Up</h1>
-<%= form_for @user do |f| %>
+<%= form_with model: @user, local: true do |form| %>
+
   <% if @user.errors.any? %>
     <div class="error_messages">
       <h2>Form is invalid</h2>
@@ -11,23 +14,18 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
+  <%= form.label :name %>
+  <%= form.text_field :username%>
 
-  <div class="actions"><%= f.submit "Sign Up" %></div>
+  <%= form.label :email %>
+  <%= form.text_field :email%>
+
+  <%= form.label :password %>
+  <%= form.password_field :password%>
+
+  <%= form.label :password_confirmation %>
+  <%= form.password_field :password_confirmation%>
+
+  <%= form.submit "Sign Up" %>
 
 <% end %>
