--- a/Back_On_Rails/app/views/users/new.html.erb
+++ b/Back_On_Rails/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to 'Home', root_path %></p>
+<p><%= link_to "Home", root_path %></p>
 
 <h1>Sign Up</h1>
 <%= form_with model: @user, local: true do |form| %>
