--- a/Back_On_Rails/app/views/users/index.html.erb
+++ b/Back_On_Rails/app/views/users/index.html.erb
@@ -19,6 +19,8 @@
 					<td><%= link_to 'Delete', user_path(user), method: :delete, data:{confirm: "Are you sure?"} %></td>
 				</tr>
 			<%end%>
+			<p><%= link_to 'Add a new user', new_user_path %></p>
+
 
 	</body>
 </html>
