Added button that returns to user create page

--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -7,5 +7,7 @@
 	<body>
 		<p>Username: <%= @user.username %> </p>
 		<p>Email: <%= @user.email %> </p>
+
+    <p><%=link_to "Back", new_user_path %></p>
 	</body>
 </html>
