--- a/Back_On_Rails/app/views/users/index.html.erb
+++ b/Back_On_Rails/app/views/users/index.html.erb
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		<table>
-			<tr>
-				<th>username</th>
-				<th>email</th>
-			</tr>
-			<% @users.each do |user| %>
-				<tr>
-					<td><%= user.username %></td>
-					<td><%= user.email %></td>
-					<td><%= link_to 'Edit', edit_user_path(user) %></td>
-					<td><%= link_to 'Show', user_path(user) %></td>
-					<td><%= link_to 'Delete', user_path(user), method: :delete, data:{confirm: "Are you sure?"} %></td>
-				</tr>
-			<%end%>
-			<p><%= link_to 'Add a new user', new_user_path %></p>
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+<table>
+  <tr>
+    <th>username</th>
+    <th>email</th>
+  </tr>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= user.username %></td>
+      <td><%= user.email %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Show', user_path(user) %></td>
+      <td><%= link_to 'Delete', user_path(user), method: :delete, data: {confirm: "Are you sure?"} %></td>
+    </tr>
+  <% end %>
+  <p><%= link_to 'Add a new user', new_user_path %></p>
+</table>
 
-
-	</body>
+</body>
 </html>
