added link to the list of all users

--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -9,5 +9,6 @@
 		<p>Email: <%= @user.email %> </p>
 
     <p><%=link_to "Back", new_user_path %></p>
+    <p><%=link_to "All users", user_path %></p>
 	</body>
 </html>
