--- a/Back_On_Rails/app/views/welcome/index.html.erb
+++ b/Back_On_Rails/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Back On Rails</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
 <p><%= link_to 'Registration', new_user_path %></p>
+<p><%= link_to 'New Item (first User has it)', new_item_path %></p>
