--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
 		<p>Username: <%= @user.username %> </p>
 		<p>Email: <%= @user.email %> </p>
 
+    <p><%=link_to "View profile", user_profile_path(@user) %></p>
     <p><%=link_to "All users", user_path %></p>
 	</body>
 </html>
