--- a/Back_On_Rails/app/views/items/show.html.erb
+++ b/Back_On_Rails/app/views/items/show.html.erb
@@ -3,5 +3,9 @@
 <body>
 	<%= @item.description%>
 </body><br/><br/>
-<%= link_to 'Edit', edit_item_path(@item) %>
 <%= link_to 'back to items', items_path %>
+
+<% if logged_in? && current_user == @item.user %>
+	<%= link_to 'Edit', edit_item_path(@item) %>
+	<%= link_to 'Delete', item_path(@item), method: :delete, data: {confirm: "Are you sure?"} %>
+<% end %>
