--- a/Back_On_Rails/app/views/welcome/index.html.erb
+++ b/Back_On_Rails/app/views/welcome/index.html.erb
@@ -7,5 +7,4 @@
 <% else %>
 	<p><%= link_to 'Log out', logout_path, method: :delete %></p>
 <% end %>
-<p><%= link_to 'New Item (first User has it)', new_item_path %></p>
-
+<p><%= link_to 'New Item (first User has it)', items_path %></p>
