Added a borrow controller that handles all borrow transactions. Created borrows/new.html.erb and new and create actions in borrow controller

--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -21,6 +21,8 @@
 			<td><%= link_to 'Edit', edit_item_path(item) %></td>
 			<td><%= link_to 'Delete', item_path(item), method: :delete, data: {confirm: "Are you sure?"} %></td>
 		<% end %>
+		<td><%= link_to('Borrow', new_item_borrow_path(item))%></td>
+
 	</tr>
 	<% end %>
 </table>
