--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -9,7 +9,7 @@
 	<tr>
 		<th>Title</th>
 		<th>Description</th>
-		<th>Username</th>
+		<th>Owner</th>
 	</tr>
 	<% @items.each do |item| %>
 		<tr>
