--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 		<p>Email: <%= @user.email %> </p>
 
     <p><%=link_to "View profile", user_profile_path(@user) %></p>
-    <p><%=link_to "All users", user_path %></p>
+    <p><%=link_to "All users", users_path %></p>
+	<p><%=link_to "Transaction History", user_transactions_path(@user) %></p>
 	</body>
 </html>
