--- a/Back_On_Rails/app/views/transactions/new.html.erb
+++ b/Back_On_Rails/app/views/transactions/new.html.erb
@@ -29,5 +29,5 @@
 <%=form_for(:transaction, url: item_transactions_path(@item), method: :post) do |form|%>
     Start Day: <%=form.date_field :start_date%></br>
     End Day: <%=form.date_field :end_date%></br>
-    <%=submit_tag("Borrow Item")%></br>
+    <%=submit_tag("Request to borrow item")%></br>
 <%end%>
