--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -11,5 +11,6 @@
     <p><%=link_to "View profile", user_profile_path(@user) %></p>
     <p><%=link_to "All users", users_path %></p>
 	<p><%=link_to "Transaction History", user_transactions_path(@user) %></p>
+	<p><%=link_to "Pending Transactions", user_pending_transactions_path(@user) %></p>
 	</body>
 </html>
