--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -22,7 +22,7 @@
 				<td><%= link_to 'Delete', item_path(item), method: :delete, data: {confirm: "Are you sure?"} %></td>
 			<% end %>
 
-			<% if item.isBorrowed? == 0%>
+			<% if item.isBorrowed? == 0 && current_user!=item.user%>
 				<td><%= link_to('Borrow', new_item_transaction_path(item))%></td>
 			<% end %>
 
