used query_params instead of path_params to pass item information for Transaction actions. Used user_id from session instead of from path_params to maintain authentication

--- a/Back_On_Rails/app/views/items/index.html.erb
+++ b/Back_On_Rails/app/views/items/index.html.erb
@@ -23,7 +23,8 @@
 			<% end %>
 
 			<% if item.isBorrowed? == 0 && current_user!=item.user%>
-				<td><%= link_to('Borrow', new_item_transaction_path(item))%></td>
+				<% query_params = {item_id: item.id} %>
+				<td><%= link_to('Request to Borrow', new_transaction_path(query_params))%></td>
 			<% end %>
 
 		</tr>
