--- a/Back_On_Rails/app/views/users/show.html.erb
+++ b/Back_On_Rails/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 
     <p><%=link_to "View profile", user_profile_path(@user) %></p>
     <p><%=link_to "All users", users_path %></p>
-	<p><%=link_to "Transaction History", user_transactions_path(@user) %></p>
-	<p><%=link_to "Pending Transactions", user_pending_transactions_path(@user) %></p>
+	<p><%=link_to "Transaction History", transactions_path %></p>
+	<p><%=link_to "Pending Transactions", pending_transactions_path %></p>
 	</body>
 </html>
