--- a/Back_On_Rails/app/views/welcome/index.html.erb
+++ b/Back_On_Rails/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
-
 <%= render 'layouts/navigation' %>
 
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class = "center container">
 
-
-<p><%= link_to 'Available Items', items_path %></p>
+	<div class = "jumbotron">
+		<h1>Back on Rails</h1>
+	</div>
+	
+</div>
