--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -45,11 +45,13 @@
 					<% end %>
 				</li>
 				<li>
-					<% if session[:user_id] == nil %>
-						<%= link_to 'Sign Up', new_user_path %>
-					<% else %>
-						<%= link_to 'Your Page', user_path(session[:user_id]) %>
-					<% end %>
+				<% if request.fullpath == "/users/new" %>
+				
+				<% elsif session[:user_id] == nil%>
+					<%= link_to 'Sign Up', new_user_path %>
+				<% else %>
+					<%= link_to 'Your Page', user_path(session[:user_id]) %>
+				<% end %>
 				</li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
