--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -35,7 +35,6 @@
 		<th>Lender</th>
         <th>Start Date</th>
         <th>End Date</th>
-        <th>Is Returned?</th>
 	</tr>
     <% @future_borrow_transactions.each do |transaction|%>
         <tr>
@@ -44,7 +43,7 @@
             <td><%= transaction.lender.username%></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
-            <td><%= transaction.isReturned%></td>
+			<td><%= link_to 'cancel transaction', transaction_path(transaction), method: :delete %></td>
         </tr>
     <% end %>
 </table>
