fixed some redirection bugs

--- a/Back_On_Rails/app/views/transactions/borrow_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/borrow_index.html.erb
@@ -43,7 +43,8 @@
             <td><%= transaction.lender.username%></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
-			<td><%= link_to 'cancel transaction', transaction_path(transaction), method: :delete %></td>
+			<% params = {redirect: borrow_transactions_path} %>
+			<td><%= link_to 'cancel transaction', transaction_path(transaction, transaction: params), method: :delete %></td>
         </tr>
     <% end %>
 </table>
