--- a/Back_On_Rails/app/views/transactions/lend_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_index.html.erb
@@ -47,7 +47,8 @@
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
             <td><%= transaction.isReturned%></td>
-			<td><%= link_to 'cancel transaction', transaction_path(transaction), method: :delete %></td>
+			<% params = {redirect: lend_transactions_path} %>
+			<td><%= link_to 'cancel transaction', transaction_path(transaction, transaction: params), method: :delete %></td>
         </tr>
     <% end %>
 </table>
