--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -12,9 +12,9 @@
 	</tr>
     <% @pending_lend_transactions.each do |transaction|%>
         <tr>
-            <td><%= transaction.item.name %></td>
+			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
             <td><%= transaction.item.description %></td>
-            <td><%= transaction.borrower.username%></td>
+			<td><%= link_to "#{transaction.borrower.username}", user_profile_path(transaction.borrower, transaction.borrower.profile) %></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
 
@@ -34,15 +34,15 @@
 	<tr>
 		<th>Item</th>
 		<th>Description</th>
-		<th>Lender</th>
+		<th>Owner</th>
         <th>Start Date</th>
         <th>End Date</th>
 	</tr>
     <% @pending_borrow_transactions.each do |transaction|%>
         <tr>
-            <td><%= transaction.item.name %></td>
+			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
             <td><%= transaction.item.description %></td>
-            <td><%= transaction.lender.username%></td>
+			<td><%= link_to "#{transaction.lender.username}", user_profile_path(transaction.lender, transaction.lender.profile) %></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
             <td><%= link_to 'edit', edit_transaction_path(transaction) %></td>
@@ -59,16 +59,16 @@
 	<tr>
 		<th>Item</th>
 		<th>Description</th>
-		<th>Lender</th>
+		<th>Owner</th>
         <th>Start Date</th>
         <th>End Date</th>
 	</tr>
     <% @borrow_transactions.each do |transaction|%>
         <% if transaction.isApproved == 2%>
             <tr>
-                <td><%= transaction.item.name %></td>
+				<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
                 <td><%= transaction.item.description %></td>
-                <td><%= transaction.lender.username%></td>
+				<td><%= link_to "#{transaction.lender.username}", user_profile_path(transaction.lender, transaction.lender.profile) %></td>
                 <td><%= transaction.start_date%></td>
                 <td><%= transaction.end_date%></td>
             </tr>
