--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,6 @@
 			<ul class="nav navbar-nav">
 
 				<li><%= link_to 'Available Items', items_path %></li>
-				<li><a href="#">Link</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 					<ul class="dropdown-menu">
@@ -38,16 +37,24 @@
 			</form>
 			<ul class="nav navbar-nav navbar-right">
 				<% if session[:user_id] != nil %>
-					<li>
-						<%= link_to 'Manage Your Borrowed Items', borrow_transactions_path %>
-						<%= link_to 'Manage Your Lent Items', lend_transactions_path %>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Your Items<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Your Listed Items</a></li>
+							<li role="separator" class="divider"></li>
+							<li><%= link_to 'Borrowed Items', borrow_transactions_path %></li>
+							<li><%= link_to 'Lent Items', lend_transactions_path %></li>
+						</ul>
 					</li>
 					<li>
-						<%= link_to 'Manage Pending Transactions', pending_transactions_path %>
+						<%= link_to 'Pending Transactions', pending_transactions_path %>
 					</li>
-					<li>
-						<%= link_to 'View Borrow History', borrow_transactions_history_path %>
-						<%= link_to 'View Lend History', lend_transactions_history_path %>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Transaction History<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><%= link_to 'View Borrow History', borrow_transactions_history_path %></li>
+							<li><%= link_to 'View Lend History', lend_transactions_history_path %></li>
+						</ul>
 					</li>
 
 				<% end  %>
