--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -1,4 +1,4 @@
-<h1>PENDING TRANSACTIONS new</h1>
+<h1>PENDING TRANSACTIONS</h1>
 
 <p>
 <div>ACCEPT OR REJECT APPLICATIONS TO BORROW YOUR ITEMS</div>
