showing error messages on failed transaction validations

--- a/Back_On_Rails/app/views/transactions/edit.html.erb
+++ b/Back_On_Rails/app/views/transactions/edit.html.erb
@@ -30,5 +30,6 @@
     Start Day: <%= form.date_field :start_date %></br>
     End Day: <%= form.date_field :end_date %></br>
     <%= form.hidden_field :redirect, value: pending_transactions_path %>
+    <%= form.hidden_field :render, value: :edit %>
     <%=submit_tag("Edit request to borrow item")%></br>
 <%end%>
