--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -1,5 +1,16 @@
 <h1>PENDING TRANSACTIONS</h1>
 
+<% if @transaction.errors.any? %>
+    <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+            <% @transaction.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
+
 <p>
 <div>ACCEPT OR REJECT APPLICATIONS TO BORROW YOUR ITEMS</div>
 <table>
@@ -18,8 +29,8 @@
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
 
-			<% params_approved = {isApproved: 1, redirect: pending_transactions_path} %>
-			<% params_rejected = {isApproved: 2, redirect: pending_transactions_path} %>
+			<% params_approved = {isApproved: 1, redirect: pending_transactions_path, render: :pending_index} %>
+			<% params_rejected = {isApproved: 2, redirect: pending_transactions_path, render: :pending_index} %>
             <td><%= link_to 'accept', transaction_path(transaction, transaction: params_approved), method: :put %></td>
             <td><%= link_to 'reject', transaction_path(transaction, transaction: params_rejected), method: :put %></td>
         </tr>
