--- a/Back_On_Rails/app/views/item_reviews/edit.html.erb
+++ b/Back_On_Rails/app/views/item_reviews/edit.html.erb
@@ -18,5 +18,7 @@
     Rating: <%= form.select :rating, options %> </br>
     Comment: <%= form.text_field :comment %> </br>
 
+    <%= form.hidden_field :is_edit, value: '1' %>
+
     <%= submit_tag("Submit Review") %></br>
 <% end %>
