--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,6 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 
-				<li><%= link_to 'Available Items', items_path %></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 					<ul class="dropdown-menu">
@@ -56,6 +55,8 @@
 							<li><%= link_to 'View Lend History', lend_transactions_history_path %></li>
 						</ul>
 					</li>
+					
+					<li><%= link_to 'My Friends', my_friends_path %></li>
 
 				<% end  %>
 
