--- a/Back_On_Rails/app/views/transactions/pending_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/pending_index.html.erb
@@ -25,7 +25,7 @@
         <tr>
 			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
             <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.borrower.username}", user_profile_path(transaction.borrower, transaction.borrower.profile) %></td>
+			<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
 
@@ -53,7 +53,7 @@
         <tr>
 			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
             <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.lender.username}", user_profile_path(transaction.lender, transaction.lender.profile) %></td>
+			<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
             <td><%= link_to 'edit', edit_transaction_path(transaction) %></td>
@@ -79,7 +79,7 @@
             <tr>
 				<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
                 <td><%= transaction.item.description %></td>
-				<td><%= link_to "#{transaction.lender.username}", user_profile_path(transaction.lender, transaction.lender.profile) %></td>
+				<td><%= link_to "#{transaction.lender.username}", user_path(transaction.lender) %></td>
                 <td><%= transaction.start_date%></td>
                 <td><%= transaction.end_date%></td>
             </tr>
