--- a/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
+++ b/Back_On_Rails/app/views/transactions/lend_history_index.html.erb
@@ -16,7 +16,7 @@
         <tr>
 			<td><%= link_to "#{transaction.item.name}", item_path(transaction.item) %></td>
             <td><%= transaction.item.description %></td>
-			<td><%= link_to "#{transaction.borrower.username}", user_profile_path(transaction.borrower, transaction.borrower.profile) %></td>
+			<td><%= link_to "#{transaction.borrower.username}", user_path(transaction.borrower) %></td>
             <td><%= transaction.start_date%></td>
             <td><%= transaction.end_date%></td>
             <td><%= transaction.isReturned%></td>
