--- a/Back_On_Rails/app/views/users/index.html.erb
+++ b/Back_On_Rails/app/views/users/index.html.erb
@@ -14,9 +14,11 @@
     <tr>
       <td><%= user.username %></td>
       <td><%= user.email %></td>
-      <td><%= link_to 'Edit', edit_user_path(user) %></td>
       <td><%= link_to 'Show', user_path(user) %></td>
-      <td><%= link_to 'Delete', user_path(user), method: :delete, data: {confirm: "Are you sure?"} %></td>
+      <% if logged_in? && current_user == user %>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Delete', user_path(user), method: :delete, data: {confirm: "Are you sure?"} %></td>
+      <% end %>
     </tr>
   <% end %>
   <p><%= link_to 'Add a new user', new_user_path %></p>
