--- a/Back_On_Rails/app/views/layouts/_navigation.html.erb
+++ b/Back_On_Rails/app/views/layouts/_navigation.html.erb
@@ -8,14 +8,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<%= link_to "Back on Rails", root_path, class: "navbar-brand", id: "logo" %>
+			<%= link_to "Back on Rails", main_app.root_path, class: "navbar-brand", id: "logo" %>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li><%= link_to "Browse all Items", items_path %></li>
-				<li><%= link_to "Browse all Users", users_path %></li>
+				<li><%= link_to "Browse all Items", main_app.items_path %></li>
+				<li><%= link_to "Browse all Users", main_app.users_path %></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 					<ul class="dropdown-menu">
@@ -42,8 +42,8 @@
 						<ul class="dropdown-menu">
 							<li><a href="#">Your Listed Items</a></li>
 							<li role="separator" class="divider"></li>
-							<li><%= link_to 'Borrowed Items', borrow_transactions_path %></li>
-							<li><%= link_to 'Lent Items', lend_transactions_path %></li>
+							<li><%= link_to 'Borrowed Items', main_app.borrow_transactions_path %></li>
+							<li><%= link_to 'Lent Items', main_app.lend_transactions_path %></li>
 						</ul>
 					</li>
 					<li>
@@ -51,31 +51,32 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Transactions<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><%= link_to 'Pending Transactions', pending_transactions_path %></li>
+							<li><%= link_to 'Pending Transactions', main_app.pending_transactions_path %></li>
 							<li role="separator" class="divider"></li>
-							<li><%= link_to 'View Borrow History', borrow_transactions_history_path %></li>
-							<li><%= link_to 'View Lend History', lend_transactions_history_path %></li>
+							<li><%= link_to 'View Borrow History', main_app.borrow_transactions_history_path %></li>
+							<li><%= link_to 'View Lend History', main_app.lend_transactions_history_path %></li>
 						</ul>
 					</li>
 
-					<li><%= link_to 'My Friends', my_friends_path %></li>
+					<li><%= link_to 'My Friends', main_app.my_friends_path %></li>
+					<li><%= link_to pluralize(Notification.unread_count(current_user), 'Notification'), main_app.notifications_path %></li>
 
 				<% end  %>
 
 				<li>
 					<% if session[:user_id] == nil %>
-						<%= link_to 'Log in', login_path %>
+						<%= link_to 'Log in', main_app.login_path %>
 					<% else %>
-						<%= link_to 'Log out', logout_path, method: :delete %>
+						<%= link_to 'Log out', main_app.logout_path, method: :delete %>
 					<% end %>
 				</li>
 				<li>
 				<% if request.fullpath == "/users/new" %>
 
 				<% elsif session[:user_id] == nil%>
-					<%= link_to 'Sign Up', new_user_path %>
+					<%= link_to 'Sign Up', main_app.new_user_path %>
 				<% else %>
-					<%= link_to 'Your Page', user_path(session[:user_id]) %>
+					<%= link_to 'Your Page', main_app.user_path(session[:user_id]) %>
 				<% end %>
 				</li>
 			</ul>
